--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+	<div class="hero"></div>
 	<h1>Barrie Bradshaw</h1>
 	<p id="slogan">Online Magazine</p>
 	<img src="images/fashion.jpg" alt="Female Model and 2 Male Models" title="fashion">
