--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -4,14 +4,17 @@
 	<title>Barrie Bradshaw</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
 	<div class="hero">
-		<h1>Barrie Bradshaw</h1>
+		<h1 id="title">Barrie Bradshaw</h1>
 		<p id="slogan">Online Magazine</p>	
+		
 	</div>
-
+	<div class="contact">
+		<a <a href="mailto:barrie@barriebradshaw.com" id="email">Contact Us</a>
+	</div>
 </body>
-	
-	<a href="mailto:barrie@barriebradshaw.com" id="email">Contact Us</a>
+		
 
 </html>
